--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.3.2",
     "react-emotion": "^9.1.3",
     "react-feather": "^1.1.0",
+    "react-icons": "^2.2.7",
     "tachyons": "^4.9.1"
   },
   "devDependencies": {
